[gd_scene load_steps=24 format=2]

[ext_resource path="res://Utilities/PokemonPartyMenu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Pictures/partybg.PNG" type="Texture2D" id=2]
[ext_resource path="res://Graphics/Pictures/partyPanelRound.png" type="Texture2D" id=3]
[ext_resource path="res://Utilities/Battle/MoveTextFont.tres" type="FontFile" id=4]
[ext_resource path="res://Graphics/Pictures/partyBall.PNG" type="Texture2D" id=5]
[ext_resource path="res://Graphics/Pictures/partyHP.png" type="Texture2D" id=6]
[ext_resource path="res://Graphics/Icons/icon003.png" type="Texture2D" id=7]
[ext_resource path="res://Utilities/Battle/Animations/PokemonPartyIconIdle.tres" type="Animation" id=8]
[ext_resource path="res://Utilities/Battle/Animations/PokemonPartyIconSelectedJumping.tres" type="Animation" id=9]
[ext_resource path="res://Graphics/Pictures/partyPanelRect.png" type="Texture2D" id=10]
[ext_resource path="res://Graphics/Windowskins/skin1.png" type="Texture2D" id=11]
[ext_resource path="res://Graphics/Pictures/partyCancelSel.png" type="Texture2D" id=12]
[ext_resource path="res://Audio/SE/Choose.WAV" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "IconIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.13 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IconSelectedJumping"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 32 ), Vector2( 60, 38 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "IconIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.13 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IconSelectedJumping"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 32 ), Vector2( 60, 38 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "IconIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.13 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IconSelectedJumping"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 32 ), Vector2( 60, 38 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "IconIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.13 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IconSelectedJumping"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 32 ), Vector2( 60, 38 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "IconIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.13 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IconSelectedJumping"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 32 ), Vector2( 60, 38 ) ]
}

[node name="PokemonPartyMenu" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 384.078 ],
"_edit_vertical_guides_": [ 360.163 ]
}

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Slot1"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Node2D" parent="Slot1"]

[node name="Name" type="Label" parent="Slot1/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot1/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot1/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot1/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot1/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot1/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot1/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.478431, 0.972549, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot1/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot1/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot1/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot1/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot1/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot1/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot1/Content/Poke"]
anims/IconIdle = ExtResource( 8 )
anims/IconSelectedJumping = ExtResource( 9 )

[node name="Slot2" type="Node2D" parent="."]
position = Vector2( 256, 16 )

[node name="TextureRect" type="TextureRect" parent="Slot2"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Node2D" parent="Slot2"]

[node name="Name" type="Label" parent="Slot2/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot2/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot2/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot2/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot2/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot2/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot2/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.439216, 0.972549, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot2/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.25098, 0.529412, 0.866667, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot2/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot2/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot2/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot2/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot2/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot2/Content/Poke"]
anims/IconIdle = SubResource( 1 )
anims/IconSelectedJumping = SubResource( 2 )

[node name="Slot3" type="Node2D" parent="."]
position = Vector2( 0, 96 )

[node name="TextureRect" type="TextureRect" parent="Slot3"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 10 )

[node name="Content" type="Node2D" parent="Slot3"]

[node name="Name" type="Label" parent="Slot3/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot3/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot3/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot3/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot3/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot3/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot3/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.439216, 0.972549, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot3/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.25098, 0.529412, 0.866667, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot3/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot3/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot3/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot3/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot3/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot3/Content/Poke"]
anims/IconIdle = SubResource( 3 )
anims/IconSelectedJumping = SubResource( 4 )

[node name="Slot4" type="Node2D" parent="."]
position = Vector2( 256, 112 )

[node name="TextureRect" type="TextureRect" parent="Slot4"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 10 )

[node name="Content" type="Node2D" parent="Slot4"]

[node name="Name" type="Label" parent="Slot4/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot4/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot4/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot4/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot4/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot4/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot4/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.439216, 0.972549, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot4/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.25098, 0.529412, 0.866667, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot4/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot4/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot4/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot4/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot4/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot4/Content/Poke"]
anims/IconIdle = SubResource( 5 )
anims/IconSelectedJumping = SubResource( 6 )

[node name="Slot5" type="Node2D" parent="."]
position = Vector2( 0, 192 )

[node name="TextureRect" type="TextureRect" parent="Slot5"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 10 )

[node name="Content" type="Node2D" parent="Slot5"]

[node name="Name" type="Label" parent="Slot5/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot5/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot5/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot5/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot5/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot5/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot5/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.439216, 0.972549, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot5/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.25098, 0.529412, 0.866667, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot5/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot5/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot5/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot5/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot5/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot5/Content/Poke"]
anims/IconIdle = SubResource( 7 )
anims/IconSelectedJumping = SubResource( 8 )

[node name="Slot6" type="Node2D" parent="."]
position = Vector2( 256, 208 )

[node name="TextureRect" type="TextureRect" parent="Slot6"]
offset_right = 256.0
offset_bottom = 98.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Node2D" parent="Slot6"]

[node name="Name" type="Label" parent="Slot6/Content"]
offset_left = 90.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Raptorch"

[node name="Shadow" type="Label" parent="Slot6/Content/Name"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raptorch"

[node name="Level" type="Label" parent="Slot6/Content"]
offset_left = 20.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 82.0
scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 4 )
text = "Lv.5"

[node name="Shadow" type="Label" parent="Slot6/Content/Level"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lv.5"

[node name="HP" type="Label" parent="Slot6/Content"]
offset_left = 150.0
offset_top = 62.0
offset_right = 216.0
offset_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "19/ 19"

[node name="Shadow" type="Label" parent="Slot6/Content/HP"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 68.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "19/ 19"

[node name="Gender" type="Label" parent="Slot6/Content"]
offset_left = 220.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.439216, 0.972549, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.721569, 0.909804, 1 )
text = "♂"

[node name="Shadow" type="Label" parent="Slot6/Content/Gender"]
show_behind_parent = true
offset_left = 1.0
offset_top = 1.0
offset_right = 21.0
offset_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.25098, 0.529412, 0.866667, 1 )
text = "♂"

[node name="Ball" type="Sprite2D" parent="Slot6/Content"]
position = Vector2( 32, 28 )
texture = ExtResource( 5 )

[node name="HP_Bar" type="Node2D" parent="Slot6/Content"]
position = Vector2( 90, 50 )

[node name="TextureRect" type="TextureRect" parent="Slot6/Content/HP_Bar"]
offset_right = 138.0
offset_bottom = 40.0
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Slot6/Content/HP_Bar"]
offset_left = 32.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 8.0
color = Color( 0.129412, 0.831373, 0.0666667, 1 )

[node name="Poke" type="Sprite2D" parent="Slot6/Content"]
position = Vector2( 60, 32 )
texture = ExtResource( 7 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slot6/Content/Poke"]
anims/IconIdle = SubResource( 9 )
anims/IconSelectedJumping = SubResource( 10 )

[node name="Cancel" type="Node2D" parent="."]
position = Vector2( 396, 326 )

[node name="TextureRect" type="TextureRect" parent="Cancel"]
offset_right = 112.0
offset_bottom = 48.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Cancel"]
offset_left = 24.0
offset_top = 10.0
offset_right = 96.0
offset_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "CANCEL"

[node name="Shadow" type="Label" parent="Cancel/Label"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 74.0
offset_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CANCEL"

[node name="Prompt" type="Node2D" parent="."]
position = Vector2( 0, 320 )

[node name="NinePatchRect" type="NinePatchRect" parent="Prompt"]
offset_right = 360.0
offset_bottom = 64.0
texture = ExtResource( 11 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="Label" parent="Prompt"]
offset_left = 16.0
offset_top = 18.0
offset_right = 396.0
offset_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "Choose Pokemon or cancel."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Prompt/Prompt"]
show_behind_parent = true
offset_left = 2.0
offset_top = 2.0
offset_right = 382.0
offset_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose Pokemon or cancel."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -12.0

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
